# spanky-rs

./: .gitignore  Cargo.toml  README.md
data/react/: responses.ron  triggers.ron
data/reply/: responses.ron  triggers.ron
logs/: 221226084702795.txt
src/: command.rs  main.rs  prelude.rs  utility.rs
src/command/: react.rs  speak.rs
src/utility/: events.rs  logger.rs  random.rs  search.rs  stored.rs
